fud2/tests/snapshots/tests__test@plan_profiler-area-util.snap
---
source: fud2/tests/tests.rs
description: "emit plan: profiler-area-util"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
calyx-lib-path = $calyx-base
args = 
rule calyx
  command = $calyx-exe -l $calyx-lib-path -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-lib-path -p $pass $args $in > $out
cider-calyx-passes = -p none
rule calyx-cider
  command = $calyx-exe -l $calyx-lib-path $cider-calyx-passes $args $in > $out

cell-json = cells.json
fsm-json = fsm.json
cell-share-json = shared-cells.json
enable-par-track-json = enable-par-track.json
path-descriptors-json = path-descriptors.json
ctrl-pos-json = ctrl-pos.json
adl-metadata-json = adl-metadata.json
passes = -p pre-opt -p compile -p post-opt -p lower
py-args = 
component_cells = $calyx-base/target/debug/component_cells
rule component-cells
  command = $component_cells -l $calyx-base $in > $out
build tb.sv: get-rsrc
rule py-to-calyx
  command = python3 $in $py-args > $out
metadata-mapping-json = metadata-map.json
fileinfo_emitter = $calyx-base/target/debug/fileinfo_emitter
rule parse-metadata
  command = $fileinfo_emitter -l $calyx-base $in -c $ctrl-pos-json
rule parse-metadata-with-adl
  command = $fileinfo_emitter -l $calyx-base $in -c $ctrl-pos-json -o $adl-metadata-json

flamegraph-script = /test/calyx/non-existent.script
create-visuals-script = $calyx-base/tools/profiler/create-visuals.sh
rule create-visuals
  command = bash $create-visuals-script $flamegraph-script profiler-out $in $out

hierarchy = /test/calyx/non-existent.json
variable = ff
rule parse-vcd
  command = profiler $in $cell-json $fsm-json $cell-share-json $enable-par-track-json $path-descriptors-json profiler-out $out --print-trace-threshold 100 --utilization-report-json $hierarchy --utilization-variable $variable

verilator = verilator
cycle-limit = 500000000
rule verilator-compile-standalone-tb
  command = $verilator $in tb.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule verilator-compile-custom-tb
  command = $verilator $in tb.sv memories.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule cp
  command = cp $in $out

python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

build metadata-calyx.futil: calyx-pass /input.ext
  pass = metadata-table-generation
build $ctrl-pos-json: parse-metadata metadata-calyx.futil
build $cell-json: component-cells /input.ext
build instrumented.sv: calyx /input.ext
  backend = verilog
  args = -p metadata-table-generation -p validate -p uniquefy-enables -p dead-group-removal -p profiler-instrumentation $passes -x tdcc:dump-fsm-json=fsm.json -x cell-share:emit-share-map=shared-cells.json -x uniquefy-enables:par-thread-json=enable-par-track.json -x uniquefy-enables:path-descriptor-json=path-descriptors.json
build verilator-out/Vtoplevel: verilator-compile-standalone-tb instrumented.sv | tb.sv
  out-dir = verilator-out
build instrumented.exe: cp verilator-out/Vtoplevel
build sim.log instrumented.vcd: sim-run instrumented.exe $datadir
  bin = instrumented.exe
  args = +NOTRACE=0 +OUT=instrumented.vcd
build flamegraph.folded: parse-vcd instrumented.vcd | $cell-json $ctrl-pos-json
build /output.ext: create-visuals flamegraph.folded

default /output.ext
