fud2/tests/snapshots/tests__test@plan_synth-verilog-to-synthesis-json.snap
---
source: fud2/tests/tests.rs
description: "emit plan: synth-verilog-to-synthesis-json"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
rule mkdir
  command = mkdir -p $out
rule move
  command = mv $in $out
rule copy
  command = cp $in $out
rule copy-utilization
  command = cp out/FutilBuild.runs/impl_1/main_utilization_placed.rpt $out
rule copy-timing
  command = cp out/FutilBuild.runs/impl_1/main_timing_summary_routed.rpt $out
rule copy-area
  command = cp out/hierarchical_utilization_placed.rpt $out
rule vivado
  command = vivado -mode batch -source synth.tcl > /dev/null
device_xdc = default.xdc
build default.xdc: get-rsrc
build synth.tcl: get-rsrc
parse-rpt-script = $calyx-base/tools/report-parsing/rpt.py
rule parse-rpt
  command = python3 $parse-rpt-script $in > $out
extract-rpt-script = $calyx-base/tools/report-parsing/extract.py
rule extract-rpt
  command = python3 $extract-rpt-script > $out
flamegraph-script = /test/calyx/non-existent.script
create-visuals-script = $calyx-base/tools/profiler/create-visuals.sh
rule create-visuals
  command = bash $create-visuals-script $flamegraph-script . $in $out

build device.xdc: copy $device_xdc
build IGNOREME: vivado | main.sv synth.tcl device.xdc
build /output.ext: extract-rpt IGNOREME

default /output.ext
